Fixing 1 pixel cutout in pattern sidebar
If a pattern name was long enough to be truncated it sometimes
overlapped the pattern sidebar (i.e. the place with the "loop" and
"resize" buttons) by 1 pixel. This resulted in a small cutout on
the left edge of the sidebar.

This was introduced in b980dadab8b2386cbe5c83a4e0004513c0ff70cc.
When the width of each pattern box was increased by 1 pixel, the
width of the pattern name element should have also been changed
by 1 pixel to compensate.

--- a/sass/jssynth.scss
+++ b/sass/jssynth.scss
@@ -373,7 +373,7 @@ input[type='range'].sequencer-playback-header::-ms-thumb:active {
   margin-left: 0.5rem;
   margin-top: 0.25rem;
   line-height: 1.5rem;
-  max-width: calc(100% - 1.5rem - 0.5rem - 1px);
+  max-width: calc(100% - 1.5rem - 0.5rem - 2px);
   overflow: hidden;
   text-overflow: ellipsis;
 }
